[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/menu_aventura.gd" type="Script" id=1]
[ext_resource path="res://objects/fondo.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/themes/menu_aventura_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/themes/menu_theme.tres" type="Theme" id=4]

[node name="menu_aventura" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="fondo" parent="." instance=ExtResource( 2 )]

[node name="botonera" type="GridContainer" parent="."]
margin_left = 212.0
margin_top = 100.0
margin_right = 812.0
margin_bottom = 400.0
columns = 3

[node name="1" type="Button" parent="botonera"]
margin_right = 197.0
margin_bottom = 90.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "1"

[node name="2" type="Button" parent="botonera"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 90.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "2"

[node name="3" type="Button" parent="botonera"]
margin_left = 402.0
margin_right = 599.0
margin_bottom = 90.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
disabled = true
text = "3"

[node name="Label" type="Label" parent="botonera"]
margin_top = 94.0
margin_right = 197.0
margin_bottom = 108.0
text = "En construccion"

[node name="menu" type="Button" parent="."]
margin_left = 718.0
margin_top = 520.0
margin_right = 908.0
margin_bottom = 540.0
theme = ExtResource( 4 )
text = "Volver al men√∫"
[connection signal="pressed" from="botonera/1" to="." method="_on_1"]
[connection signal="pressed" from="botonera/2" to="." method="_on_2"]
[connection signal="pressed" from="botonera/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
